Side menu fixed on low resolutions
Before this fix, it was invisible in mobile and small screens...

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -158,7 +158,7 @@ pre {
  */
 .wrapper {
     /*max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    /*max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;*/
     padding-right: $spacing-unit;
@@ -166,12 +166,12 @@ pre {
     flex-grow: 2;
     @extend %clearfix;
 
-    @include media-query($on-laptop) {
+   /* @include media-query($on-laptop) {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
-    }
+    }*/
 }
 
 
